fix(file-drag-and-drop): adjusting error alert alignment

--- a/packages/styles/src/front-end/fields/drag-and-drop-file.scss
+++ b/packages/styles/src/front-end/fields/drag-and-drop-file.scss
@@ -198,6 +198,7 @@ $color-fill: #077bff;
           right: -12px;
           bottom: -10px;
           z-index: 2;
+          line-height: 26px;
 
           width: 26px;
           height: 26px;
